Fixed horizontal scroll

--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -27,11 +27,13 @@
 @media screen and (max-width: 767px) {
   .cover {
     margin: 64px auto 0;
+    min-height: 40vh;
   }
 }
 
 @media screen and (max-width: 1279px) and (min-width: 768px) {
   .cover {
     margin: 88px auto 0;
+    min-height: 60vh;
   }
 }
