--- a/blocks/default-back/default-back.css
+++ b/blocks/default-back/default-back.css
@@ -1,4 +1,5 @@
 .default-back {
   background: #2A2C2F;
   margin: 0 auto;
+  overflow-x: hidden;
 }
