--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -6,7 +6,7 @@
 @media screen and (max-width: 767px) {
   .lead__image {
     width: 100vw;
-  }
+    }
 }
 
 @media screen and (max-width: 1023px) and (min-width: 768px) {
@@ -17,6 +17,6 @@
 
 @media screen and (max-width: 1279px) and (min-width: 1024px) {
   .lead__image {
-    width: 100vw;
+
   }
 }
