--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,6 @@
 .page {
   min-width: 320px;
   max-width: 1280px;
-  width: 100%;
   padding: 0 48px;
   margin: 0 auto;
   height: 100%;
